# mlir-list

./: build-cmake.sh  build-local.sh  fix-all-branches.sh  fix-branches-minimal.sh  fix_branches_properly.sh
include/ListProject/Conversion/ListToStandard/: ListToStandard.h
include/ListProject/Dialect/List/IR/: ListOps.td
lib/Conversion/: CMakeLists.txt
lib/Conversion/ListToStandard/: CMakeLists.txt  ListToStandard.cpp
lib/Dialect/List/IR/: ListOps.cpp
listproject-opt/: CMakeLists.txt
